app-deployments/app2/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-ui
  namespace: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2-ui
  template:
    metadata:
      labels:
        app: app2-ui
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nginx
          image: ghcr.io/xtemplate24/app2-ui@sha256:f3c82b17e74f5443116aea45b1c99c42a3fbdec80cd1ad95fc15d2c263d1979d
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests: { cpu: 10m, memory: 16Mi }
            limits: { cpu: 100m, memory: 64Mi }
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /tmp
              name: tmp
      volumes:
        - emptyDir: {}
          name: tmp
